; ModuleID = '/home/carl/AnghaBench/systemd/src/login/extr_logind-dbus.c_method_suspend.c'
source_filename = "/home/carl/AnghaBench/systemd/src/login/extr_logind-dbus.c_method_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SPECIAL_SUSPEND_TARGET = common dso_local global i32 0, align 4
@INHIBIT_SLEEP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"org.freedesktop.login1.suspend\00", align 1
@.str.1 = private unnamed_addr constant [49 x i8] c"org.freedesktop.login1.suspend-multiple-sessions\00", align 1
@.str.2 = private unnamed_addr constant [46 x i8] c"org.freedesktop.login1.suspend-ignore-inhibit\00", align 1
@.str.3 = private unnamed_addr constant [8 x i8] c"suspend\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32*)* @method_suspend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @method_suspend(i32* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = bitcast i8* %8 to i32*
  store i32* %9, i32** %7, align 8
  %10 = load i32*, i32** %7, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = load i32, i32* @SPECIAL_SUSPEND_TARGET, align 4
  %13 = load i32, i32* @INHIBIT_SLEEP, align 4
  %14 = load i32*, i32** %6, align 8
  %15 = call i32 @method_do_shutdown_or_sleep(i32* %10, i32* %11, i32 %12, i32 %13, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.3, i64 0, i64 0), i32* %14)
  ret i32 %15
}

declare dso_local i32 @method_do_shutdown_or_sleep(i32*, i32*, i32, i32, i8*, i8*, i8*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
